# FileZipper

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-publish.yml
src/filezipper/: __init__.py  cli.py  core.py  file_utils.py  main.py
tests/: test_huffman_encoding.py
